syntax = "proto3";
option go_package = "../pb";

import "transactions.proto";

message ValidatorCommitment {
        string peer_id                = 1;
        uint64 total_stake            = 2;
        repeated Nullifier nullifiers = 3;

        message Nullifier {
                bytes hash    = 1;
                uint64 amount = 2;
        }
}

message DBValidator {
        string peer_id                = 1;
        uint64 total_stake            = 2;
        repeated Nullifier nullifiers = 3;
        uint64 unclaimed_coins        = 4;
        uint32 epochBLocks            = 5;

        message Nullifier {
                bytes hash    = 1;
                uint64 amount = 2;
        }
}

message DBTxs {
        repeated Transaction transactions = 1;
}

message DBBlockNode {
        bytes blockID = 1;
        uint32 height = 2;
}